--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 # Tutorial is database name
 # JDBC -> Java Database Connectivity
 spring.datasource.url=jdbc:mysql://localhost:3306/tutorial
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#To automatically create the table
 spring.jpa.hibernate.ddl-auto=update
