--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tutorial
 spring.datasource.password=root
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
 
 #To automatically create the table
 spring.jpa.hibernate.ddl-auto=update
