--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.port=8080
 
 #To automatically create the table
 spring.jpa.hibernate.ddl-auto=update
+
+#To Show SQL queries
+spring.jpa.show-sql=true
