Social Media -> `Day 16`

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  security:
+    user:
+      name: rohit
+      password: password
+      roles: ADMIN
 application:
   version: 1.0-pre-release
